* create API functions to access link information values
* add libfvalue

API
* add functions
  - for icon location block ?
  - for special and/or known folder identifier
* remove liblnk_file_get_link_target_identifier_data

Release:
* check TODOs
* configure
 - check inclusion local library functions
* update manuals
* automated tests
  - 2x open/close (bfio and normal)

Bindings:
* .net
* java

20141216
* worked on Python 3 support

20141130
* code clean up

20141117
* code clean up

20141111
* code clean up

20141026
* changes for deployment

20141019
* changes for deployment

20141013
* worked on utility scripts

20141004
* update Python-bindings tests

20140921
* changes for project site move

20140905
* updated libfwsi version check

20140831
* bug fix in Python-bindings

20140807
* worked on property store data block support

20140731
* bug fix in Python-bindings

20140730
* worked on shell items support
* small changes in debug output

20140729
* small changes in lnkinfo output

20140723
* worked on dpkg debug packages support

20140715
* worked on dpkg debug packages support

20140714
* worked on shell items support

20140622
* updated dependencies

20140323
* worked on Python bindings

20140112
* worked on updates

20140107
* 2014 update
* updated dependencies
* worked on Python bindings
  - changes regarding integer object signedness on 32-bit architectures

20131015
* updated dependencies
* improved pyolecf as integer functions

20131014
* updated dependencies

20130929
* worked on setup.py, largely for MSI builds

20130923
* updated dependencies

20130829
* worked on automated tests
* corrected versions in change log

20130815
* change to API to expose link target identifier data

20130806
* fixes for building with stand-alone libuna and libbfio

20130805
* updated dependencies
* bug fix in pymsiecf file object libbfio glue code

20130626
* worked on shell items
  - detection of delegate 0x2e item
* fix in debug output for local path

20130421